# timemanager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/time_manager/: __init__.py
src/timemanager/: __init__.py  common.py  notz.py  timemanager.py
